--- a/default.scss
+++ b/default.scss
@@ -19,7 +19,7 @@ a
 	text-decoration: none;
 }
 
-textarea
+textarea, button
 {
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 }
