siunarutlit og dagateljari

--- a/client/shared/nav/nav.scss
+++ b/client/shared/nav/nav.scss
@@ -17,13 +17,13 @@
 		height: 55px;
 		width: 55px;
 	}
-	padding: 13px;
+	padding: 13px 0 0 13px;
 }
 
 .navBurger
 {
 	float: left;
-	margin: 20px 10px;
+	margin: 20px 0 0 10px;
 	img
 	{
 		height: 40px;
