--- a/client/home/home.scss
+++ b/client/home/home.scss
@@ -8,7 +8,7 @@
 	min-height: 300px;
 	max-height: 500px;
 	background: {
-		image: url("/images/homeimage/madmax.jpeg");
+		image: url("http://i.imgur.com/vRBGvSl.jpg");
 		size: cover;
 		position: center;
 	}
