before removal of autopublish

--- a/default.scss
+++ b/default.scss
@@ -8,6 +8,7 @@ body
 {
 	background: {
 		color: $lgray;
+		image: url('/images/bg.png');
 	}
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	margin: 0;
